# accents

./: INSTALL  Makefile.in  Obad.new  Obad.new.data  Obad.old  Obad.old.data  README.md  acc2tre.y  accents.c  accents.h  accents.man  accutil.c  configure  configure.in  parsebc.c  tnk2acc.l
