dnl Process this file with autoconf to produce a configure script.
AC_INIT(accents.c)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_LEX
AC_PROG_LN_S
AC_CHECK_PROGS(YACC, byacc, yacc, 'bison -y')
AC_DECL_YYTEXT

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(getopt.h)
AC_CHECK_HEADERS(string.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.

AC_OUTPUT(Makefile)
